--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,6 +1,21 @@
 <h1><%= @list.name %></h1>
 
+<% if @list.tasks.any? %>
+  <h4>Here are tasks for this list:</h4>
+
+  <ul>
+    <% @list.tasks.each do |task| %>
+      <li>
+        <%= task.description %> | <%= link_to "Edit", edit_list_path(@list, task) %> | <%= link_to "Delete", list_task_path(@list, task), :data => {:confirm => "Sure?", :method => "delete"} %>
+      </li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>No tasks yet!</p>
+<% end %>
+
+
+<p><%= link_to "Add a task", new_list_task_path(@list) %></p>
 <p><%= link_to "Edit", edit_list_path(@list) %></p>
 <p><%= link_to "Delete", list_path(@list), :data => {:confirm => "Sure?", :method => "delete"} %></p>
-
 <p><%= link_to "Return to lists", lists_path %></p>
